--- a/v2/patrodent/templates/index-5.html
+++ b/v2/patrodent/templates/index-5.html
@@ -43,7 +43,7 @@
                             </div>
                             <div class="grid_8 suffix_1 omega">
                                 <h3 class="margin-bot">Contact Form</h3>
-                                <form action="#" id="contact-form">
+                                <form action="#" id="contact-form" class="form">
                                     <div class="success"> Contact form submitted!<br>
                                     <strong>We will be in touch soon.</strong> </div>
                                     <fieldset>
