--- a/v2/patrodent/templates/contacto.html
+++ b/v2/patrodent/templates/contacto.html
@@ -39,16 +39,19 @@
                         <div class="wrapper">
                             <div class="alpha prefix_1 grid_14">
                                 <div class="border-1">
-                                    <h3 class="p3">How to Find Us</h3>
+                                    <h2 class="p3">Como encontrarnos</h2>
                                     <div class="wrapper">
                                         <figure class="img-style img-indent">
                                             <div id="map_canvas"></div>
                                         </figure>
                                         <div class="extra-wrap">
-                                        <h5 class="indent-bot">Cum sociis natoque <span>uset magnis dis.</span></h5>
-                                        <p>Sed ullamcorper pulvinar nisi, in auctor nibh rutrum eleifend. Nullam rutrum placerat ligula eget <br />molestie. Donec ullamcorper nulla hendrerit tellus sodales ultricies. In condimentum venenatis orci et.</p>
-                                        <p>Pellentesque rhoncus magna euismod. Nam lorem mi, vehicula <br />ut tempor non, commodo vitae <br />nibh. Maecenas congue aliquam tus, ac auctor lorem.</p>
+                                            <h5 class="indent-bot">Cum sociis natoque <span>uset magnis dis.</span></h5>
+                                            <p>Sed ullamcorper pulvinar nisi, in auctor nibh rutrum eleifend. Nullam rutrum placerat ligula eget <br />molestie. Donec ullamcorper nulla hendrerit tellus sodales ultricies. In condimentum venenatis orci et.</p>
+                                            <p>Pellentesque rhoncus magna euismod. Nam lorem mi, vehicula <br />ut tempor non, commodo vitae <br />nibh. Maecenas congue aliquam tus, ac auctor lorem.</p>
                                         </div>
+                                        <p>Pellentesque rhoncus magna euismod. Nam lorem mi, vehicula ut tempor non, commodo vitae nibh. Maecenas congue aliquam tus, ac auctor lorem.</p>
+                                        <p>Pellentesque rhoncus magna euismod. Nam lorem mi, vehicula ut tempor non, commodo vitae nibh. Maecenas congue aliquam tus, ac auctor lorem.</p>
+                                        <p>Pellentesque rhoncus magna euismod. Nam lorem mi, vehicula ut tempor non, commodo vitae nibh. Maecenas congue aliquam tus, ac auctor lorem.</p>
                                     </div>
                                 </div>
                             </div>
