--- a/v2/patrodent/templates/base.html
+++ b/v2/patrodent/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/grid.css" type="text/css" media="screen">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/animate-flip.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/shadowbox.css" type="text/css" media="screen">
    {% endblock %}
    {% block js %}
     <script src="{{ STATIC_URL }}js/jquery-1.6.3.min.js" type="text/javascript"></script>
@@ -22,21 +23,23 @@
     <script src="{{ STATIC_URL }}js/script.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/Angelina_400.font.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/jquery.easing.1.3.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/shadowbox.js" type="text/javascript"></script>
     <script type="text/javascript">
         (function($){
             $(document).ready(function () {
-                var candado = false;
+                var padlock = false;
                 $("h1").mouseenter(function() {
-                    if (!candado) {
-                        candado = true;
+                    if (!padlock) {
+                        padlock = true;
                         $(this).addClass("animated flip");
                         var that = this;
                         setTimeout(function () {
                                     $(that).removeClass("animated flip");
-                                    candado = false;
-                        }, 2000);
+                                    padlock = false;
+                        }, 1500);
                     }
                 });
+                Shadowbox.init({continuous: true});
             });
           })(jQuery);
     </script>
@@ -124,21 +127,42 @@
                     <div class="footer-content">
                         <div class="wrapper indent-bot5">
                             <div class="alpha grid_13 suffix_1">
-                                <div class="footer-title">Fresh Photo Gallery</div>
+                                <div class="footer-title">Galería de fotografías</div>
                                 <div class="wrapper">
                                    {% block footergallery %}
-                                    <figure><a href="#"><img src="{{ STATIC_URL }}images/footer-img1.jpg" alt="" /></a></figure>
-                                    <figure><a href="#"><img src="{{ STATIC_URL }}images/footer-img2.jpg" alt="" /></a></figure>
-                                    <figure><a href="#"><img src="{{ STATIC_URL }}images/footer-img3.jpg" alt="" /></a></figure>
-                                    <figure><a href="#"><img src="{{ STATIC_URL }}images/footer-img1.jpg" alt="" /></a></figure>
-                                    <figure><a href="#"><img src="{{ STATIC_URL }}images/footer-img2.jpg" alt="" /></a></figure>
+                                    <figure>
+                                        <a href="{{ STATIC_URL }}images/patrocinio.jpg" rel="shadowbox[Vacation];" title="My Image">
+                                            <img src="{{ STATIC_URL }}images/footer-img1.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                    <figure>
+                                        <a href="{{ STATIC_URL }}images/footer-img2.jpg" rel="shadowbox[Vacation];" title="pepep pep pop">
+                                            <img src="{{ STATIC_URL }}images/footer-img2.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                    <figure>
+                                        <a href="{{ STATIC_URL }}images/footer-img3.jpg" rel="shadowbox">
+                                            <img src="{{ STATIC_URL }}images/footer-img3.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                    <figure>
+                                        <a href="{{ STATIC_URL }}images/footer-img1.jpg" rel="shadowbox">
+                                            <img src="{{ STATIC_URL }}images/footer-img1.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                    <figure>
+                                        <a href="{{ STATIC_URL }}images/footer-img2.jpg" rel="shadowbox">
+                                            <img src="{{ STATIC_URL }}images/footer-img2.jpg" alt="" />
+                                        </a>
+                                    </figure>
                                    {% endblock %}
                                 </div>
                             </div>
-                            <div class="grid_5 omega contact_info">
+                            <div class="grid_6 omega contact_info">
                                 <div class="footer-title">Información de contacto</div>
                                 <dl class="contacts">
-                                    <dt>Marqués de Paradas 22 1 º dcha<br/>41001 Sevilla<br />E-mail: <a class="link" href="#">info@patrodent.com</a></dt>
+                                    <dt>Marqués de Paradas 22 1 º dcha<br/>41001 Sevilla</dt>
+                                    <dd><span>E-mail:</span><a class="link" href="mailto:info@patrodent.com">info@patrodent.com</a></dd>
                                     <dd><span>Teléfono:</span>954 21 12 44</dd>
                                 </dl>
                             </div>
