--- a/v2/patrodent/templates/quienes_somos.html
+++ b/v2/patrodent/templates/quienes_somos.html
@@ -2,6 +2,35 @@
 
 {% block class-patrodent-link %}class="active"{% endblock %}
 
+{% block footergallery %}
+    <figure>
+        <a href="{{ STATIC_URL }}images/patrocinio_despacho.jpg" rel="shadowbox[quienesSomos]" title="Patrocinio en el despacho">
+            <img src="{{ STATIC_URL }}images/patrocinio_despacho.min.jpg" alt="Patrocinio en el despacho" title="Patrocinio en el despacho" />
+        </a>
+    </figure>
+    <figure>
+        <a href="{{ STATIC_URL }}images/angela2.jpg" rel="shadowbox[quienesSomos]" title="Angela Martín">
+            <img src="{{ STATIC_URL }}images/angela2.min.jpg" alt="Angela Martín" title="Angela Martín" />
+        </a>
+    </figure>
+    <figure>
+        <a href="{{ STATIC_URL }}images/equipo_trabajando.jpg" rel="shadowbox[quienesSomos]" title="Equipo trabajando">
+            <img src="{{ STATIC_URL }}images/equipo_trabajando.min.jpg" alt="Equipo trabajando" title="Equipo trabajando" />
+        </a>
+    </figure>
+    <figure>
+        <a href="{{ STATIC_URL }}images/patrocinio_trabajando.jpg" rel="shadowbox[quienesSomos]" title="Patrocinio trabajando">
+            <img src="{{ STATIC_URL }}images/patrocinio_trabajando.min.jpg" alt="Patrocinio trabajando" title="Patrocinio trabajando" />
+        </a>
+    </figure>
+    <figure>
+        <a href="{{ STATIC_URL }}images/patrocinio2.jpg" rel="shadowbox[quienesSomos]" title="Patrocinio Gómez">
+            <img src="{{ STATIC_URL }}images/patrocinio2.min.jpg" alt="Patrocinio Gómez" title="Patrocinio Gómez" />
+        </a>
+    </figure>
+{% endblock %}
+
+
 {% block content %}
     <div class="main">
         <div class="container_24">
@@ -28,19 +57,16 @@
                                         <figure class="img-style p2"><img src="{{ STATIC_URL }}images/empleada1.jpg" alt="" /></figure>
                                         <strong>Sam Kromstain</strong>
                                         <span class="bl p1">Net casunc odioseas gdaus kerteluctus aloem aecenas.</span>
-                                        <a href="#">Read More</a>
                                     </div>
                                     <div class="box img-indent">
                                     <figure class="img-style p2"><img src="{{ STATIC_URL }}images/empleada2.jpg" alt="" /></figure>
                                         <strong>Alan Smith</strong>
                                         <span class="bl p1">Net casunc odioseas gdaus kerteluctus aloem aecenas.</span>
-                                        <a href="#">Read More</a>
                                     </div>
                                     <div class="box">
                                     <figure class="img-style p2"><img src="{{ STATIC_URL }}images/angela.jpg" alt="" /></figure>
                                         <strong>Angela Martín</strong>
                                         <span class="bl p1">Net casunc odioseas gdaus kerteluctus aloem aecenas.</span>
-                                        <a href="#">Read More</a>
                                     </div>
                                 </div>
                             </div>
