Detalle de antes y despues

--- a/trunk/v2/patrodent/templates/antes_y_despues.html
+++ b/trunk/v2/patrodent/templates/antes_y_despues.html
@@ -6,7 +6,9 @@
     <script type="text/javascript">
         (function($){
             $(document).ready(function () {
-                $(".after").hoverAfterBefore({before: "antes", after: "despues"});
+                setTimeout(function() {
+                    $(".after").hoverAfterBefore({before: "antes", after: "despues"});
+                }, 500);
             });
           })(jQuery);
     </script>
